include_directories (${PROJECT_SOURCE_DIR}/SteganographyLib)
include_directories( ${OpenCV_INCLUDE_DIRS} )
link_directories(${LIBD} ${LIB})
add_executable(PartC_encoder PartC.cpp)
target_link_libraries( PartC_encoder debug ${OpenCV_LIBD} optimized ${OpenCV_LIB} )
target_link_libraries( PartC_encoder debug ${LIBD}/SteganographyLib.lib optimized ${LIB}/SteganographyLib.lib )